# video-caption-assistant

./: .env.example  .gitignore  README.md  config.toml  docker-compose.yml  error.txt  main.py  pyproject.toml  setup.sh
road_map/: IMPROVE.md  ROADMAP.md  WINDOWS_EXECUTABLE_PLAN.md  road_map.py
src/video_caption/: config.py  graph.py  logger.py  state.py
src/video_caption/clients/: lm_studio.py  minio_client.py
src/video_caption/nodes/: __init__.py  assembler.py  cache_check.py  chunker.py  extractor.py  normalizer.py  title.py  transcriber.py  transcript_loader.py  translator.py  uploader.py  validator.py
src/video_caption/nodes/exporters/: ass.py  srt.py
