[project]
name = "video-caption-assistant"
version = "0.1.0"
description = "Offline-first video caption assistant powered by LangGraph, faster-whisper, and LM Studio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "faster-whisper>=1.0",
    "ffmpeg-python>=0.2",
    "minio>=7.2",
    "httpx>=0.27",
    "typer>=0.12",
    "pysrt>=1.1",
    "python-dotenv>=1.0",
    "static-ffmpeg>=3.0",
]

[project.scripts]
video-caption = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_caption"]
